Fix bug [#31512] Focus Zoom on text object with modifers fails

Change BKE_object_minmax() to use the same logic as meshes: use the
object bounding box if available, since it will include the modifier
DM output.